# rust-subscriber

./: Cargo.toml  README.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
tests/: health_check.rs
